- fixed the right margin for the articles page - fixed the bottom margin for the partners container

--- a/app/assets/stylesheets/od4d.css
+++ b/app/assets/stylesheets/od4d.css
@@ -300,6 +300,7 @@ article.rss {
 	padding-bottom: 15px;
 	margin: 0px 0px 22px 0px;
 	padding-bottom: 15px;
+	width: 95%;
 }
 article.partners {
 	border-bottom-style: solid;
