--- a/app/views/partners/index.html.erb
+++ b/app/views/partners/index.html.erb
@@ -10,7 +10,7 @@
       <%= image_tag(partner.logo, :alt => partner.name, :property => "schema:logo", :class => "network") %>
       <div property="schema:description" class="align-left">
         <%= partner.description %>
-      </div>
+      </div><br>
     </article>
   <% end %>
 </section>
