--- a/app/assets/stylesheets/od4d.css
+++ b/app/assets/stylesheets/od4d.css
@@ -368,11 +368,14 @@ p.date
 }
 
 .feeds-home {
-	margin-top: 0px;
-	padding-top: 0px;
-	width: 100%;
-	position: relative;
-	float: left;
+
+	border-bottom-style: solid;
+    border-width: 1px;
+	border-bottom-color: #cccccc;
+	padding-bottom: 15px;
+	margin: 0px 0px 22px 0px;
+	padding-bottom: 15px;
+	width: 90%;
 }
 
 .button {
