Fixed issue with a tag being wrongly self-closed.

--- a/app/views/learn/how_to_integrate_with_od4d.html.erb
+++ b/app/views/learn/how_to_integrate_with_od4d.html.erb
@@ -19,7 +19,7 @@
   <br>
   <h3>Step 1</h3>
   <p>
-    You deliver RSS feeds RSS means remember that RSS (Really Simple Syndication) is just a diferent way to write XML (Extensible Markup Language). So, you must use the <a href="http://www.w3.org/TR/REC-xml"/><em>XML specification</em></a> in it's latest version.
+    You deliver RSS feeds RSS means remember that RSS (Really Simple Syndication) is just a diferent way to write XML (Extensible Markup Language). So, you must use the <a href="http://www.w3.org/TR/REC-xml"><em>XML specification</em></a> in it's latest version.
   </p>
   <br>
   <h3>Step 2</h3>
