--- a/app/views/learn/how_to_create_a_semantic_page.html.erb
+++ b/app/views/learn/how_to_create_a_semantic_page.html.erb
@@ -23,8 +23,7 @@
     <p>RDFa Tutorial:</p>
     <p>Here we are going to show how <%= link_to("http://od4d.org/about", controller: "pages", action: "about") %> page was made using RDFa markup to describe semantic data.</p>
     <p>This is a piece of the raw html of "od4d.org/about" page, before making it semantic:</p>
-    <p>
-      <pre><code class="language-markup"><%=h '<article>
+    <pre><code class="language-markup"><%=h '<article>
     <h1>About the Project</h1>
     <section>
         <p>
@@ -39,29 +38,25 @@
 .
 .
 .'%></code></pre>
-    </p>
 
     <p>
       Let's start making it semantic, we're going to start declaring our very first resource, using the attributes: <em>resource, vocab, typeof</em>.
     </p>
-    <p>
-      <pre><code class="language-markup"><%=h '<article vocab="http://schema.org" resource="#about" typeof="Article">'%></code></pre>
-    </p>
+    <pre><code class="language-markup"><%=h '<article vocab="http://schema.org" resource="#about" typeof="Article">'%></code></pre>
     <p>
       The aditional attributes means the following:
-      <ul>
-        <li><em>vocab</em>: This resource is going to use the informed <%= link_to("vocabulary", controller: "learn", action: "glossary", anchor: "vocabulary") %>, all the RDFa inside this resource will be relative to this <%= link_to("vocabulary", controller: "learn", action: "glossary", anchor: "vocabulary") %></li>
-        <li><em>resource</em>: This tag, and all of it's content, describes the "#about" resource. The "#about" resource has the absolute URI: <em><%="#{request.protocol}#{request.host_with_port}/about/#about"%></em>. When referencing resources from other domains, the absolute URI should be used. </li>
-        <li><em>typeof</em>: This resource is of the following type. This type should be from the declared <%= link_to("vocabulary", controller: "learn", action: "glossary", anchor: "vocabulary") %>.</li>
-      </ul>
     </p>
+    <ul>
+      <li><em>vocab</em>: This resource is going to use the informed <%= link_to("vocabulary", controller: "learn", action: "glossary", anchor: "vocabulary") %>, all the RDFa inside this resource will be relative to this <%= link_to("vocabulary", controller: "learn", action: "glossary", anchor: "vocabulary") %></li>
+      <li><em>resource</em>: This tag, and all of it's content, describes the "#about" resource. The "#about" resource has the absolute URI: <em><%="#{request.protocol}#{request.host_with_port}/about/#about"%></em>. When referencing resources from other domains, the absolute URI should be used. </li>
+      <li><em>typeof</em>: This resource is of the following type. This type should be from the declared <%= link_to("vocabulary", controller: "learn", action: "glossary", anchor: "vocabulary") %>.</li>
+    </ul>
 
     <p>
       Now let's decribe it a little bit further:
     </p>
 
-    <p>
-      <pre data-line="3"><code class="language-markup"><%=h '<article vocab="http://schema.org" resource="#about" typeof="Article">
+    <pre data-line="3"><code class="language-markup"><%=h '<article vocab="http://schema.org" resource="#about" typeof="Article">
     <h1 property="headline">About the Project</h1>
     <section>
         <p>
@@ -83,7 +78,6 @@
         <p property="datePublished">05/05/2014</p>
     </section>
 </article>' %></code></pre>
-    </p>
 
     <p>
       Here we are using the attribute <em>property</em> in some places, this attribute describe what an html tag element represents for it's resource, which is the html tag content, e.g. <em><%=h '<p>THIS CONTENT for example</p>'%></em>, based on pre-defined attributes that some <%= link_to("vocabulary", controller: "learn", action: "glossary", anchor: "vocabulary") %> specifies.
@@ -96,14 +90,12 @@
       Now, it's also important to pay attention for how an value should be provided for a given property specified in the <%= link_to("vocabulary", controller: "learn", action: "glossary", anchor: "vocabulary") %> being used. For example dates are interpreted differently by people and computers. For this reason we should present it for the user in a more "human" way, and for computers in a more technical way. To do that, we can use the <em>content</em> property.
     </p>
 
-    <p>
-      <pre><code class="language-markup"><%=h '        .
+    <pre><code class="language-markup"><%=h '        .
         .
        <p property="author">Author: W3C</p>
        <p property="datePublished" content="2014-05-05T00:00:00+00:00">05/05/2014</p>
     </section>
 </article>' %></code></pre>
-    </p>
 
     <p>
       As can be seen in the example above, the <em>content</em> attribute in the <em><%=h '"<p property="datePublished" content="2014-05-05T00:00:00+00:00">"'%></em> is different than the actual content provided in <em><%=h '"05/05/2014"'%></em>, even though they represent the same date. With this, when applications and tools come across this html, they will be able to actually understand the date represented, because they are going to use the the attribute <em>content</em> of the tag, which is in the format that they expect it to be, ISO 8061, as specified <a href='http://schema.org/Date'>here</a>
@@ -113,8 +105,7 @@
       That's it, that's how to markup html with RDFa following some conventions, now let's include a tricky thing here, something that would make our markup ambiguous. Let's say that we want to describe our content with more than one <%= link_to("vocabulary", controller: "learn", action: "glossary", anchor: "vocabulary") %>, we need to properly represent that in order to computers understand it. First let's do it the way we know so far, just introducing a html tag that already exists, the tag <em>meta</em>.
     </p>
 
-    <p>
-      <pre><code class="language-markup"><%=h '<article vocab="http://schema.org" resource="#about" typeof="Article">
+    <pre><code class="language-markup"><%=h '<article vocab="http://schema.org" resource="#about" typeof="Article">
 <h1 property="headline">About the Project</h1>
 <section resource="#od4d-about-video" vocab="http://ogp.me/ns#" typeof="video.movie">
     <meta property="title" content="Open Data for a easier life"/>
@@ -122,28 +113,27 @@
         <video property="url" src="//player.vimeo.com/video/69632849"></video>
     </p>
 </section>'%></code></pre>
-    </p>
 
     <p>
-      Here a new <%= link_to("vocabulary", controller: "learn", action: "glossary", anchor: "vocabulary") %> was used to describe our content, the <a href="http://ogp.me/ns#">http://ogp.me/ns#</a> <%= link_to("vocabulary", controller: "learn", action: "glossary", anchor: "vocabulary") %>, which is the Open Graph Protocol that Facebook created. Here we are using it to show that many <%= link_to("vocabularies", controller: "learn", action: "glossary", anchor: "vocabulary") %> can be used to describe content semantically. Even though, one may use as many <%= link_to("vocabularies", controller: "learn", action: "glossary", anchor: "vocabulary") %> as he/she wants, choosing very well defined <%= link_to("onthologies", controller: "learn", action: "glossary", anchor: "onthology") %>, will help minimize the amount of <%= link_to("vocabulary", controller: "learn", action: "glossary", anchor: "vocabulary") %> needed.
+      Here a new <%= link_to("vocabulary", controller: "learn", action: "glossary", anchor: "vocabulary") %> was used to describe our content, the <a href="http://ogp.me/ns#">http://ogp.me/ns#</a> <%= link_to("vocabulary", controller: "learn", action: "glossary", anchor: "vocabulary") %>, which is the Open Graph Protocol that Facebook created. Here we are using it to show that many
+      <%= link_to("vocabularies", controller: "learn", action: "glossary", anchor: "vocabulary") %> can be used to describe content semantically. Even though, one may use as many <%= link_to("vocabularies", controller: "learn", action: "glossary", anchor: "vocabulary") %> as he/she wants, choosing very well defined
+      <%= link_to("onthologies", controller: "learn", action: "glossary", anchor: "onthology") %>, will help minimize the amount of <%= link_to("vocabulary", controller: "learn", action: "glossary", anchor: "vocabulary") %> needed.
     </p>
 
     <p>
       Another important thing to note here, there is a little thing to fix. We are defining our video, with "http://ogp.me/ns" <%= link_to("vocabulary", controller: "learn", action: "glossary", anchor: "vocabulary") %>, but it is also inside of a resource said to be using "http://schema.org" <%= link_to("vocabulary", controller: "learn", action: "glossary", anchor: "vocabulary") %>, this is an ambiguity, RDFa does not allow it unless just one resource is being defined inside another. So let's fix it using <em>namespaces</em> or <em>aliases</em> with the attribute prefix specified by RDFa. Here's how to declare them:
     </p>
-    <p>
-      <pre><code class="language-markup"><%=h '<html xmlns="http://www.w3.org/1999/xhtml">
+
+    <pre><code class="language-markup"><%=h '<html xmlns="http://www.w3.org/1999/xhtml">
 <head>...</head>
 <body prefix="schema: http://schema.org/
               og: http://ogp.me/ns#">'%></code></pre>
-    </p>
 
     <p>
       And here's the entire code, using the aliases/namespaces to use properties and types of some <%= link_to("vocabulary", controller: "learn", action: "glossary", anchor: "vocabulary") %>:
-      </p>
+    </p>
 
-    <p>
-      <pre><code class="language-markup"> <%=h '<html xmlns="http://www.w3.org/1999/xhtml">
+    <pre><code class="language-markup"> <%=h '<html xmlns="http://www.w3.org/1999/xhtml">
  <head>...</head>
  <body prefix="schema: http://schema.org/
                og: http://ogp.me/ns#">
@@ -174,7 +164,6 @@
   .
   </body>
   </html>'%></code></pre>
-    </p>
     <p>
       The example above is the final version of a semantic html, for the two resources that we were trying to describe semantically. The <em>prefix</em> is used to to create namespaces, or aliases for the <%= link_to("vocabulary", controller: "learn", action: "glossary", anchor: "vocabulary") %> URI, to be easier to use it. We use the <em>prefix</em> attribute in the main html element for content, the <em>body</em>, this because we wanted to describe resources only in the content part of the website. But the <em>prefix</em> tag could be also used in the <em>html</em> tag, to markup semantic data in the <em>head</em> section of the page. Here two aliases were created, the <em>schema</em> and the <em>og</em> for the <em>http://schema.org, http://ogp.me/ns#</em> <%= link_to("vocabulary", controller: "learn", action: "glossary", anchor: "vocabulary") %> respectivelly. Every type and property that we use further down the html code, is prefixed with it's respective alias/namespace, like this, there is no ambiguity, and also just by rapidily looking into it, we know from which <%= link_to("vocabulary", controller: "learn", action: "glossary", anchor: "vocabulary") %> the types and properties are from.
     </p>
