--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <%= yield :head %>
 </head>
 <body prefix="schema: http://schema.org/">
-  <header role="banner">
+  <header role="banner" class="top-page">
     <div class="center-align">
       <div class="logo">
         <a href="/"><%= image_tag("logo-od4d2.png", :alt => "Open Data for Development") %></a>
