Removed HTML5 time element.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -31,7 +31,7 @@
           &nbsp;|&nbsp;
         <% end %>
         <% if !article.datePublished.nil? then %>
-          <em>Date:</em> <time><%=article.datePublished.strftime("%m/%d/%Y") %></time>
+          <em>Date:</em> <%=article.datePublished.strftime("%m/%d/%Y") %>
         <% end %>
       </p>
     </article>
