W3CBrasil/OD4D#28 - Card 27 - Implemented points 1,2,3 and 5.

--- a/app/assets/stylesheets/od4d.css
+++ b/app/assets/stylesheets/od4d.css
@@ -25,6 +25,22 @@
 	vertical-align: top;
 }
 
+div.article-snippet-header::after {
+	content: '';
+	clear: both;
+	display: block;
+}
+
+div.article-snippet-header > div.right {
+	float: right;
+	font-weight: 300;
+	font-size: 0.6em;
+}
+
+div.article-snippet-header > div.left {
+	float: left;
+}
+
 div.separator {
 	border-right:1px solid;
 	position: relative;
@@ -149,8 +165,7 @@ p {
 }
 
 em {
-	font-weight: 500;
-	font-style: normal;
+	font-style: italic;
 }
 
 .content {
