--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,23 +13,33 @@
 <div class="separator"></div>
 
 <aside class="home-right">
-  <h2>Connected Network</h2><br>
+  <h2><%= link_to("Connected Network", controller: "articles") %></h2><br>
   <% @articles.each do |article| %>
     <article class="feeds-home">
+      <div class="article-snippet-header">
+        <div class="right">
+          <%if !article.publisher.blank? then%>
+            <%= article.publisher.name%>
+          <%end%>
+        </div>
+        <div class="left">
+          <%= article.articleSection.join(", ").upcase %>
+        </div>
+      </div>
       <h3><%= link_to(article.title, controller: "articles", anchor: article.slug) %></h3>
       <p class="rsshome">
-        <em>Category:</em> <%= article.articleSection.join(", ") %>
-        <br />
-        <%if !article.author.blank? then%>
-          <em>By:</em> <%= article.author %>
-        <% end %>
-        <% if !article.author.blank? && !article.datePublished.nil? then %>
-          &nbsp;|&nbsp;
-        <% end %>
         <% if !article.datePublished.nil? then %>
-          <em>Date:</em> <%=article.datePublished.strftime("%m/%d/%Y") %>
+          <em>publicado em <%=article.datePublished.strftime("%m/%d/%Y") %></em>
+        <% end %>
+        <%if !article.author.blank? then%>
+          <em>por <%= article.author %></em>
         <% end %>
       </p>
+      <% if @articles.last == article then %>
+      <p style="text-align: center;">
+        <em><%= link_to("ver mais notícias", controller: "articles") %></em>
+      </p>
+      <% end %>
     </article>
   <% end %>
   <h2><%= link_to("RDA and RDFa concepts", controller: "learn", action: "introduction_to_rdf_and_rdfa") %></h2>
