--- a/app/assets/stylesheets/od4d.css
+++ b/app/assets/stylesheets/od4d.css
@@ -25,22 +25,6 @@
 	vertical-align: top;
 }
 
-div.article-snippet-header::after {
-	content: '';
-	clear: both;
-	display: block;
-}
-
-div.article-snippet-header > div.right {
-	float: right;
-	font-weight: 300;
-	font-size: 0.6em;
-}
-
-div.article-snippet-header > div.left {
-	float: left;
-}
-
 div.separator {
 	border-right:1px solid;
 	position: relative;
@@ -135,7 +119,7 @@ h2 {
 	font-weight: 600;
 	color: #da6235;
 	line-height: 1.4em;
-	margin: 25px 0px 0px 0px;
+	margin: 20px 0px 0px 0px;
 	padding: 0px;
 }
 
@@ -149,12 +133,6 @@ h3 {
 	margin-top: 0px
 }
 
-
-h3 a {
-  color: #666666;
-}
-
-
 p {
 	font-size: 1em;
 	font-family: 'Exo 2', sans-serif;
@@ -162,6 +140,11 @@ p {
 	color: #2b2b2b;
 	margin: 15px 0px 0px 0px;
 	line-height: 1.5em;
+}
+
+p.morenews {
+	margin-top: 0px;
+	text-align: center;
 }
 
 em {
@@ -186,6 +169,14 @@ a:hover {
 	color: #da6235;
 }
 
+a.grey {
+	font-weight: 400;
+	color: #666666;
+}
+
+a.grey:hover {
+	color: #da6235;
+}
 
 footer a:hover {
 	color: #da6235;
@@ -353,12 +344,25 @@ p.summary {
 	line-height: 1.5em;
 }
 
+p.summary a {
+	color: #da6235;
+}
+
+
 p.rsshome {
 	display: inline-block;
 	font-size: .875em;
 	font-family: 'Exo 2', sans-serif;
 	font-weight: 400;
 	color: #666666;
+	margin: 0px 0px 0px 0px;
+}
+
+p.sourcelink {
+	display: inline-block;
+	font-size: .75em;
+	font-family: 'Exo 2', sans-serif;
+	font-weight: 200;
 	margin: 0px 0px 0px 0px;
 }
 
@@ -381,13 +385,11 @@ p.date
 }
 
 .feeds-home {
-
 	border-bottom-style: solid;
-    border-width: 1px;
+  border-width: 1px;
 	border-bottom-color: #cccccc;
-	padding-bottom: 15px;
-	margin: 0px 0px 22px 0px;
-	padding-bottom: 15px;
+	margin: 0px 0px 10px 0px;
+	padding-bottom: 5px;
 	width: 95%;
 }
 
