--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,31 +3,15 @@
 <% end %>
 
 <section>
-  <h1>Connected Network</h1>
-  <% @articles.each do |article| %>
-    <article id="<%=article.slug%>" class="feeds rss" resource="<%=article.url%>" typeof="schema:Article">
-      <header>
-        <h2 class="Feeds" property="schema:headline"><a href="<%=article.url%>"><%= article.title %></a></h2>
-        <%if !article.author.blank? then%>
-          <p class="author" property="schema:author">By: <%= article.author %></p>
-        <%end%>
-        <%if !article.datePublished.blank? then%>
-          <p class="date" property="schema:datePublished" content="<%=article.datePublished.iso8601%>">Date: <%=article.datePublished.strftime("%m/%d/%Y") %></p>
-        <%end%>
-      </header>
-      <aside class="social-buttons">
-        <a href="<%=article.share_twitter%>"><%= image_tag("logo-twitter.png", :alt => "Share with Twitter") %></a>
-        &nbsp;
-        <a href="<%=article.share_linkedin%>"><%= image_tag("logo-linkedin.png", :alt => "Share with LinkedIn") %></a>
-        &nbsp;
-        <a href="<%=article.share_googleplus%>"><%= image_tag("logo-gplus.png", :alt => "Share with Google+") %></a>
-      </aside>
-      <p class="category" property="schema:articleSection"> <%= article.articleSection.join(", ") %> </p>
-      <% if article.publisher %>
-        <p class="category" property="schema:articleSection"> <%= image_tag(article.publisher.logo)%> </p>
-      <%end%>
-
-      <%= render partial: "article_summary_description", locals: {article: article, size: "500"} %>
-    </article>
-  <% end %>
+  <section id="articles_listing" class="articles-listing">
+    <h1 class="bottom-reset">Rede Conectada</h1>
+    <em>Fique por dentro das últimas notícias do universo Open Data</em><br/>
+    <br>
+    <% @articles.each do |article| %>
+      <%= render partial: "articles/article_details", locals: {article: article, home: false} %>
+    <% end %>
+  </section>
+  <section id="partners_listing" class="partners-listing">
+    <h1>Nossos Parceiros</h1>
+  </section>
 </section>
