W3CBrasil/OD4D#27 - layout adjustments

--- a/app/assets/stylesheets/od4d.css
+++ b/app/assets/stylesheets/od4d.css
@@ -328,6 +328,7 @@ article.partners {
 	padding-bottom: 15px;
 	margin: 0px;
 	padding-bottom: 15px;
+	padding-top: 15px;
 	padding-right: 0px;
 	text-align: center;
 }
