W3CBrasil/OD4D#26 - CSS adjustments

--- a/app/views/partners/_partners_listing.erb
+++ b/app/views/partners/_partners_listing.erb
@@ -1,6 +1,6 @@
 <% partners.each do |partner| %>
   <article id="<%= partner.slug %>" class="partners" typeof="schema:Organization" resource="<%=partner.url%>">
-    <h4 property="schema:name"><a href="<%= partner.url %>" target="_blank"><%= partner.name %></a></h4>
+    <h4 property="schema:name"><a href="<%= partner.url %>" target="_blank" class="partner-title"><%= partner.name %></a></h4>
     <%= image_tag(partner.logo, :alt => partner.name, :property => "schema:logo") %>
   </article>
 <% end %>
