--- a/app/assets/stylesheets/od4d.css
+++ b/app/assets/stylesheets/od4d.css
@@ -28,12 +28,24 @@
 .articles-listing {
 	float: left;
 	width: 60%;
+	height: 100%;
 }
 
 .partners-listing {
 	float: right;
 	width: 300px;
 	text-align: center;
+	background-color: rgb(197, 197, 197);
+}
+
+.partners-title {
+	text-align: center;
+	color: #333333;
+	padding-bottom: 40px;
+}
+
+.partner-title {
+	color: #333333;
 }
 
 div.separator {
@@ -109,11 +121,10 @@ footer a {
 .main {
 	background-color: #ffffff;
 	max-width: 61em;
-	padding: 20px 15px 0px 15px;
+	padding: 0px 15px 0px 15px;
 	margin: 0px auto;
 	position: relative;
-
-	}
+}
 
 h1 {
 	font-size: 1.7em;
@@ -323,12 +334,11 @@ article.rss {
 }
 article.partners {
 	border-bottom-style: solid;
-    border-width: 1px;
+  border-width: 1px;
 	border-bottom-color: #cccccc;
-	padding-bottom: 15px;
 	margin: 0px;
-	padding-bottom: 15px;
-	padding-top: 15px;
+	padding-bottom: 0px;
+	padding-top: 0px;
 	padding-right: 0px;
 	text-align: center;
 }
