--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -12,7 +12,7 @@
     <% end %>
   </section>
   <section id="partners_listing" class="partners-listing">
-    <h2 style="text-align: center;">Nossos Parceiros</h2>
+    <h2 class="partners-title">Nossos Parceiros</h2>
     <%= render partial: "partners/partners_listing", locals: {partners: @partners } %>
   </section>
 </section>
