--- a/app/assets/stylesheets/od4d.css
+++ b/app/assets/stylesheets/od4d.css
@@ -25,17 +25,8 @@
 	vertical-align: top;
 }
 
-.articles-listing {
-	float: left;
-	width: 60%;
-	height: 100%;
-}
-
 .partners-listing {
-	float: right;
-	width: 300px;
 	text-align: center;
-	background-color: rgb(197, 197, 197);
 }
 
 .partners-title {
@@ -181,10 +172,6 @@ em {
 	background-color: #ffffff;
 }
 
-article {
-	padding-right: 25px;
-}
-
 a {
 	color: #da6235;
 	text-decoration: none;
@@ -313,14 +300,20 @@ h2.Feeds a {
 }
 
 .social-buttons {
-	display: inline-block;
 	position: relative;
-	margin: 10px;
 	vertical-align: middle;
 	text-align: right;
-	width: 100%;
-	margin: 0px;
-	padding: 0px;
+}
+
+.social-buttons > h1 > a {
+	color: #333333;
+	text-decoration: none;
+}
+
+.clear-floating::after {
+	display: block;
+	clear: both;
+	content:'';
 }
 
 article.rss {
@@ -350,6 +343,10 @@ span.author {
 	color: #666666;
 	margin: 5px 0px 0px 0px;
 	line-height: 1.3em;
+}
+
+p.article {
+	margin-top: 15px;
 }
 
 p.category {
@@ -413,11 +410,9 @@ p.date
 
 .feeds-home {
 	border-bottom-style: solid;
-  border-width: 1px;
+    border-width: 1px;
 	border-bottom-color: #cccccc;
-	margin: 0px 0px 10px 0px;
-	padding-bottom: 5px;
-	width: 95%;
+	margin: 20px 0px 20px 0px;
 }
 
 .button {
