--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,15 +1,9 @@
-<h3>Article</h3>
-<p><%= @article.url %></p>
-<p><%= @article.title %></p>
-<p><%= @article.author %></p>
-<p><%= @article.summary %></p>
-<p><%= @article.description %></p>
-<p><%= @article.articleBody %></p>
-<p><%= @article.articleSection.join(", ").upcase %></p>
-<p><%= @article.datePublished %></p>
-<h3>Partner</h3>
-<p><%= @article.publisher.uri %></p>
-<p><%= @article.publisher.description %></p>
-<p><%= @article.publisher.logo %></p>
-<p><%= @article.publisher.url %></p>
-<p><%= @article.publisher.name %></p>
+<div typeof="schema:Article" resource="#">
+	<h2 property="schema:headline"><%= @article.title %></h2>
+	<a href="<%= @article.url %>" target="blank">publicado em <span property="schema:datePublished"><%= @article.datePublished.strftime("%d %B %Y") %></span></a>
+	por <span property="schema:author"><%= @article.author %></span>
+	<p>fonte:
+		<a property="schema:publisher" href="<%= @article.publisher.url %>"><%= @article.publisher.name %></a>
+	</p>
+	<p property="schema:articleBody"><%= @article.description %></p>
+</div>
