W3CBrasil/OD4D#35 - @alvarocavalcanti - show raw html on article page

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,5 +5,5 @@
 	<p>fonte:
 		<a property="schema:publisher" href="<%= @article.publisher.url %>"><%= @article.publisher.name %></a>
 	</p>
-	<p property="schema:articleBody"><%= @article.description %></p>
+	<p property="schema:articleBody"><%= raw(@article.summary.gsub(/\n/, "<br/>")) %></p>
 </div>
