W3CBrasil/OD4D#35 - Displaying raw, unstripped HTML. Including links, images and videos.

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,5 +5,5 @@
 	<p>fonte:
 		<a property="schema:publisher" href="<%= @article.publisher.url %>"><%= @article.publisher.name %></a>
 	</p>
-	<p property="schema:articleBody"><%= raw(@article.summary.gsub(/\n/, "<br/>")) %></p>
+	<p property="schema:articleBody"><%= raw(@article.article_content) %></p>
 </div>
