--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,12 +10,9 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require reset
- *= require foundation-custom
- *= require header
- *= require od4d
- *= require cases
  *= require partners
  *= require font-awesome
- *= require od4d-foundation-custom
+ *= require grid
+ *= require style
+ *= require slicknav
  */
