--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,55 +10,46 @@
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= yield :head %>
+  <script>
+    $(window).load(function(){
+      $(".stick").sticky({ topSpacing: 0 });
+    });
+  </script>
 </head>
 <body prefix="schema: http://schema.org/">
-  <header role="banner" class="top-page">
-    <div class="center-align">
-      <div class="logo">
-        <a href="/"><%= image_tag("logo-od4d2.png", :alt => "Open Data for Development") %></a>
-      </div>
-      <nav class="top-bar" data-topbar role="navigation">
-        <ul class="title-area">
-          <li class="name">
-          </li>
-           <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-          <li class="toggle-topbar menu-icon menu-button"><a href="#"><span>Menu</span></a></li>
-        </ul>
-        <div class="section top-bar-section">
-          <ul>
-            <li><%= link_to("ABOUT THE PROJECT", controller: "pages", action: "about") %></li>
-            <li><%= link_to("CONNECTED NETWORK", controller: "articles") %></li>
-            <li class="has-dropdown">
-              <a href="#">LEARN</a>
-                <ul class="dropdown">
-                  <li><%= link_to("CONNECT WITH US", controller: "learn", action: "how_to_integrate_with_od4d") %></li>
-                  <li><%= link_to("INTRODUCTION RDF AND RDFa", controller: "learn", action: "introduction_to_rdf_and_rdfa") %></li>
-                  <li><%= link_to("CREATE A SEMANTIC PAGE", controller: "learn", action: "how_to_create_a_semantic_page") %></li>
-                  <li><%= link_to("GLOSSARY", controller: "learn", action: "glossary") %></li>
-                </ul>
-              </li>
-              <li><a href="https://github.com/W3CBrasil/OD4D" target="blank"><%= image_tag("github32.png", :alt => "contribute on github") %></a></li>
-          </ul>
-        </div>
-      </nav>
-    </div>
+  <header class="stick maintop grid-100 mobile-grid-100">
+    <%= link_to controller: "home", action: "index"  do %>
+      <%= image_tag "logo.png", :alt => "Open Data for Development" %>
+    <% end %>
+    <nav id="menu" class="menu floatRight">
+      <ul>
+        <li><a href="">SOBRE A PLATAFORMA</a></li>
+        <li>
+          <a class="dropdown" href="">COMO PARTICIPAR</a>
+        </li>
+        <li>
+          <a class="dropdown" href="">UNIVERSO OPENDATA</a>
+        </li>
+        <li>
+          <a class="dropdown" href="">CASOS PRÁTICOS</a>
+        </li>
+        <li>
+          <a class="dropdown" href="">EVENTOS</a>
+        </li>
+      </ul>
+    </nav>
   </header>
 
   <div class="main" role="main">
     <%= yield %>
   </div>
 
-  <footer class="inner-shadow clear" role="contentinfo">
-    <div class="center-box out-shadow">
-      <div class="center-align">
-        <p class="footbar">
-          <%= link_to("Terms and conditions", controller: "pages", action: "terms_and_conditions") %>
-        </p>
-        <p class="copyright">
-          © 2014 Open Data for Development - All Rights Reserved.
-        </p>
-      </div>
-    </div>
+  <div class="bottom">
+
+  </div>
+  <footer class="mainfooter">
+    <a href="">TERMOS E CONDIÇÕES</a>
+    <p class="floatRight">© 2014 Open Data for Development - All Rights Reserved.</p>
   </footer>
   <%= render :partial => '/layouts/ga_script' if Rails.application.config.use_google_analytics %>
 </body>
