Fixes W3CBrasil/OD4D#40 - @alfredosegundo

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -14,6 +14,10 @@
 		<div class="grid-70">
 			<p>
 				<%= raw(@article.article_content) %>
+				<% if @article.article_content.size == 500 && @article.is_third_party? %>
+					...<br/>
+					[<a href="<%=@article.url%>" target="_blank">Leia mais</a>]
+				<% end %>
 			</p>
 		</div>
 		<aside class="grid-30">
