Fixes W3CBrasil/OD4D#41

--- a/app/views/casein/posts/_form.html.erb
+++ b/app/views/casein/posts/_form.html.erb
@@ -15,6 +15,12 @@
 		<%= casein_datetime_select f, f.object, :pub_date %>
 	</div>
 	<div class="col-lg-6">
-		<%= casein_text_area f, f.object, :content %>
+		<%= casein_text_area f, f.object, :about %>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-lg-12">
+		<%= casein_text_area_big f, f.object, :content %>
 	</div>
 </div>
