--- a/app/views/casein/posts/_table.html.erb
+++ b/app/views/casein/posts/_table.html.erb
@@ -3,20 +3,22 @@
 <table class="table table-striped table-hover table-condensed">
 	<thead>
 		<tr>
+			<th><%= casein_sort_link "Pub date", :pub_date %></th>
 			<th><%= casein_sort_link "Title", :title %></th>
 			<th><%= casein_sort_link "Author", :author %></th>
-			<th><%= casein_sort_link "Pub date", :pub_date %></th>
 			<th><%= casein_sort_link "Content", :content %></th>
+			<th><%= casein_sort_link "About", :about %></th>
 			<th>&nbsp;</th>
 		</tr>
 	</thead>
 	
 	<% posts.each do |post| %>
 		<tr>
+			<td><%= casein_table_cell_link post.pub_date, casein_post_path(post) %></td>
 			<td><%= casein_table_cell_link post.title, casein_post_path(post) %></td>
 			<td><%= casein_table_cell_link post.author, casein_post_path(post) %></td>
-			<td><%= casein_table_cell_link post.pub_date, casein_post_path(post) %></td>
-			<td><%= casein_table_cell_link post.content, casein_post_path(post) %></td>
+			<td><%= casein_table_cell_link post.content[0..499]+"...", casein_post_path(post) %></td>
+			<td><%= casein_table_cell_link post.about, casein_post_path(post) %></td>
 			<td class="delete">
 				<%= link_to(casein_show_row_icon("trash"), casein_post_path(post), :method => :delete, :data => { :confirm => "Are you sure you want to delete this post?" }) %>
 			</td>
